--- a/style.css
+++ b/style.css
@@ -41,43 +41,56 @@ header {
   padding: 75px 0;
 }
 
-.card-purple {
-  width: 304px;
-  height: 514px;
-  background: url('./assets/card-purple.svg') no-repeat;
-  position: absolute;
-  z-index: -1;
-  display: none;
-}
-
 #card {
   width: 264px;
   height: 419px;
-  background: var(--purple-dark) url(./assets/card-espiral.svg);
-  box-shadow: 2px 2px 30px -15px #000000;
-  border-radius: 13.12px;
+  box-shadow: 0px 26.459px 44.0983px rgba(18, 18, 20, 0.4);
+  border-radius: 13px;
   overflow: hidden;
-
   margin-top: 18px;
+  background: url(./assets/card-espiral.svg) no-repeat;
+  user-select: none;
+  cursor: pointer;
+}
+
+[data-card='explorer'] {
+  background-color: var(--purple-dark) !important;
+  border: 0.5px solid var(--purple-dark);
+}
+[data-card='ignite'] {
+  background-color: var(--green-dark) !important;
+  border: 0.5px solid var(--green-dark);
 }
 
 .card-header {
   width: 100%;
   height: 60px;
-  border-top: 9px solid var(--purple);
   display: flex;
   justify-content: space-between;
 }
 
+[data-card='explorer'] .card-header {
+  border-top: var(--purple) 9px solid;
+}
+[data-card='ignite'] .card-header {
+  border-top: var(--green) 9px solid;
+}
+
 .card-header .card-logo {
-  width: 66px; /*96px*/
+  width: 66px;
   height: 48px;
-  background: var(--purple);
   display: flex;
   justify-content: flex-end;
   position: relative;
   border-bottom-right-radius: 8px;
   z-index: 1;
+}
+
+[data-card='explorer'] .card-header .card-logo {
+  background: var(--purple);
+}
+[data-card='ignite'] .card-header .card-logo {
+  background: var(--green);
 }
 
 .card-header .card-logo::after {
@@ -87,9 +100,15 @@ header {
   right: -28.5px;
   width: 0;
   height: 0;
-  border-top: 43px solid var(--purple);
-  border-right: 29px solid transparent;
   z-index: 5;
+  border-right: 29px solid transparent;
+}
+
+[data-card='explorer'] .card-header .card-logo::after {
+  border-top: 43px solid var(--purple);
+}
+[data-card='ignite'] .card-header .card-logo::after {
+  border-top: 43px solid var(--green);
 }
 
 .card-header .card-logo::before {
@@ -100,11 +119,18 @@ header {
   width: 15px;
   height: 15px;
   background-color: transparent;
-  border-top: 2px solid var(--purple);
-  border-left: 2px solid var(--purple);
   border-radius: 100% 0 0 0;
   z-index: 5;
   transform: rotate(15deg);
+}
+
+[data-card='explorer'] .card-header .card-logo::before {
+  border-top: 2px solid var(--purple);
+  border-left: 2px solid var(--purple);
+}
+[data-card='ignite'] .card-header .card-logo::before {
+  border-top: 2px solid var(--green);
+  border-left: 2px solid var(--green);
 }
 
 .card-header .card-logo img {
@@ -157,7 +183,6 @@ header {
 .card-info .card-type {
   width: 128.5px;
   height: 32.5px;
-  background: var(--purple);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -176,6 +201,13 @@ header {
   color: #f9e757;
 }
 
+[data-card='explorer'] .card-info .card-type {
+  background: var(--purple);
+}
+[data-card='ignite'] .card-info .card-type {
+  background: var(--green);
+}
+
 .card-info .card-type::after {
   content: '';
   position: absolute;
@@ -183,9 +215,15 @@ header {
   left: -16.4px;
   width: 0;
   height: 0;
-  border-bottom: 26px solid var(--purple);
   border-left: 17.5px solid transparent;
   z-index: 5;
+}
+
+[data-card='explorer'] .card-info .card-type::after {
+  border-bottom: 26px solid var(--purple);
+}
+[data-card='ignite'] .card-info .card-type::after {
+  border-bottom: 26px solid var(--green);
 }
 
 .card-info .card-type::before {
@@ -196,11 +234,18 @@ header {
   width: 20px;
   height: 20px;
   background-color: transparent;
-  border-right: 2px solid var(--purple);
-  border-bottom: 2px solid var(--purple);
   border-radius: 0 0 100% 0;
   z-index: 5;
   transform: rotate(20.5deg);
+}
+
+[data-card='explorer'] .card-info .card-type::before {
+  border-right: 2px solid var(--purple);
+  border-bottom: 2px solid var(--purple);
+}
+[data-card='ignite'] .card-info .card-type::before {
+  border-right: 2px solid var(--green);
+  border-bottom: 2px solid var(--green);
 }
 
 .card-info .card-description {
@@ -216,7 +261,13 @@ header {
   line-height: 160%;
 
   color: #ffffff;
+}
+
+[data-card='explorer'] .card-info .card-description {
   background: var(--purple);
+}
+[data-card='ignite'] .card-info .card-description {
+  background: var(--green);
 }
 
 .card-info .card-description h1 {
