--- a/style.css
+++ b/style.css
@@ -143,11 +143,14 @@ header {
 
 .card-header .card-techs {
   margin: 11px 16px;
+  height: 16px;
+  display: none;
 }
 
 .card-header .card-techs img {
-  margin-left: 3.5px;
-  cursor: pointer;
+  max-width: 22px;
+  height: auto;
+  margin-left: 7px;
 }
 
 .card-header .card-techs img:hover {
@@ -183,9 +186,11 @@ header {
 .card-info .card-type {
   width: 128.5px;
   height: 32.5px;
+
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
   padding: 6px 0 0 11.5px;
   gap: 5px;
 
@@ -199,6 +204,8 @@ header {
   font-size: 11.8889px;
   line-height: 120%;
   color: #f9e757;
+
+  display: none;
 }
 
 [data-card='explorer'] .card-info .card-type {
@@ -282,6 +289,13 @@ header {
   padding: none;
   margin: -2.7px;
   letter-spacing: -0.25px;
+}
+
+[data-card='explorer'] [data-card-explorer] {
+  display: flex !important;
+}
+[data-card='ignite'] [data-card-ignite] {
+  display: flex !important;
 }
 
 /* Animations */
